# wit-bindgen-go

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  RELEASE.md  go.mod  go.sum  go.work  go.work.sum
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
cm/: CHANGELOG.md  README.md  RELEASE.md  case.go  case_test.go  debug_test.go  docs.go  error.go  error.wasm.go  future.go  go.mod  hostlayout_test.go  index.go  index_test.go  list.go  list_test.go  option.go  result_test.go  stream.go  tuple.go  variant.go
cmd/wit-bindgen-go/: main.go  main_test.go
design/: README.md
docs/: cm.html  index.html  redirect.js
internal/clone/: clone.go  clone_test.go
internal/memoize/: memoize.go
internal/module/: module.go
internal/wasm/: section.go  wasm.go
internal/wasmtools/: .gitignore  Cargo.toml  instance.go  instance_other.go  instance_tinygo.go  types.go  wasmtools.go  wasmtools_tinygo.go
internal/witcli/: logger.go  witcli.go
testdata/: go.mod
testdata/codegen/: char.wit.json  conventions.wit.json  enum-has-go-keyword.wit.json  error-context.wit  error-context.wit.json  error-context.wit.json.golden.wit  (+81 more)
tests/: tests.go  tools.go
version/: version.go
wit/: codec.go  docs.go  enum.go  error.go  flags.go  function.go  future.go  ident.go  ident_test.go  interface.go  list.go  list_test.go  load.go  option.go  package.go  pointer.go  prune.go  record.go  resolve.go  resource.go  result.go  stability.go  stream.go  testdata_test.go  tuple.go  type.go  typedef.go  variant.go  webassembly.wit  wit.go  world.go
(+99 files in other folders)
